# bpr-uml-shared

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/bpr_data/: repository.py
src/bpr_data/models/: diagram.py  invitation.py  log_item.py  model.py  mongo_document_base.py  permission.py  project.py  response.py  some_item.py  team.py  user.py  workspace.py
