[metadata]
name = bpr-uml-shared
version = 0.0.2
author = Aron Wissing Kjærgaard
author_email = agk1304@gmail.com
description = Shared code for a bachelor project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AronGreen/bpr-uml-shared
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src